# ml-inference-service

./: .dockerignore  .env.example  .gitignore  BUSINESS_PLAN.md  CODE_CHECK_REPORT.md  Dockerfile  Dockerfile.streamlit  Dockerfile.worker  Makefile  PROJECT_STRUCTURE.md  README.md  README_STREAMLIT.md  README_for_me.md  REORGANIZATION.md  TESTING_REPORT.md  TEST_RESULTS_REPORT.md  TODO.md  docker-compose.yml  pyproject.toml  pytest.ini  test_admin.py  test_full_cycle.py  view_admin.py
alembic/: env.py
alembic/versions/: 002_payments_loyalty_prediction_hardening.py  20250330_0001_initial.py  (+1 more)
backend/: alembic.ini  requirements.txt
dashboard/: api_client.py  config.py  main.py  views.py
docker/: entrypoint-api.sh  prometheus.yml
docs/: architecture.md  billing-and-loyalty.md  business-plan.md  local-development.md  testing.md
prometheus/: prometheus.yml
scripts/: README.md  check_pending.py  create_sample_sklearn_model.py  demo_user_flow.py  init_data.py  init_data_api.sh  simulate_activity.py  simulate_activity.sh
streamlit/: dashboard.py
streamlit_dashboard/: api_client.py  config.py  main.py  requirements.txt  views.py
tests/: README.md  conftest.py  helpers.py  test_auth.py  test_auth_edge_cases.py  test_billing.py  test_celery.py  test_integration.py  test_main_exception_handlers.py  test_main_exceptions.py  test_metrics.py  test_ml.py  test_models_edge_cases.py  test_predict_task.py  test_prediction_tasks.py  test_predictions.py  test_predictions_edge_cases.py  test_promocodes.py  test_session.py  test_users.py
tools/: smoke.py
(+241 files in other folders)
